--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Document</title>
 </head>
 <body>
+
+
+
     <div class="pane">
         <header>
             <h1 id="header__logo">NFTvehicle</h1>
@@ -18,6 +21,7 @@
                 <a href="" class="menu__element">Item 4</a>
             </nav>
         </header>
+
         <section id="landing">
             <div id="landing__description">
                 <h2 id="landing__title">Tokeniza tu auto</h2>
@@ -32,8 +36,8 @@
         <p id="second__pane__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere repudiandae magni dolores mollitia minus qui. Tempora, laboriosam animi! Quae deleniti animi doloremque placeat sunt minima ipsa soluta qui tempore quibusdam, rerum, consequatur quam velit obcaecati! Deserunt nisi tenetur eius, provident tempora facere officiis, voluptatum molestias consectetur, eum numquam eaque excepturi officia illo. Tenetur ipsam ducimus quas, maiores pariatur quos voluptates? Rem quisquam commodi nulla mollitia repellat expedita dolores nostrum quam temporibus maiores vero laboriosam possimus perferendis dolore, error vitae fugit reiciendis asperiores beatae officiis similique praesentium eligendi, adipisci veritatis. Veniam fugiat ab, provident odio necessitatibus tenetur itaque inventore ad praesentium aut optio doloremque, recusandae odit, amet quod. Obcaecati blanditiis consectetur suscipit aspernatur ut eaque facere quisquam eum quaerat animi. Minima doloremque placeat accusantium quam assumenda sit libero saepe laborum. Voluptatem possimus consequatur assumenda rerum! Odio excepturi quaerat est officiis voluptates possimus, laborum molestias? Vel nesciunt nemo deleniti dolorem placeat architecto mollitia quibusdam. Blanditiis odit ipsam vero, fugit rem voluptatum nulla dolores sapiente expedita itaque quasi aliquam. Nulla, libero ducimus quia ab delectus nemo quisquam iste odio unde fugit hic? Explicabo, autem. Dolorum quas distinctio a possimus neque qui praesentium tempore architecto nobis, culpa quibusdam! Reprehenderit fuga commodi accusantium totam nihil?</p>
         <h2 id="second__pane__roles__title">Our Model</h2>
         <div id="second__pane__roles">
-            <section class="second__pane__cards">
-                <svg xmlns="http://www.w3.org/2000/svg" class="card__image" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#FFFFFF" fill="none" stroke-linecap="round" stroke-linejoin="round">
+            <section class="second__pane__cards" onclick="">
+                <svg xmlns="http://www.w3.org/2000/svg" class="card__svg" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#FFFFFF" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                     <path d="M4 21c1.147 -4.02 1.983 -8.027 2 -12h6c.017 3.973 .853 7.98 2 12" />
                     <path d="M12.5 13h4.5c.025 2.612 .894 5.296 2 8" />
@@ -44,7 +48,7 @@
                 <p class="card__paragraph">Is the role responsible of creating the NFT, The manufacturer adds the the vehicle's genesis information and who will be the government. In this case, he/she will be the first owner.</p>
             </section>
             <section class="second__pane__cards">
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-trademark" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <svg xmlns="http://www.w3.org/2000/svg" class="card__svg" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                     <path d="M4.5 9h5m-2.5 0v6" />
                     <path d="M13 15v-6l3 4l3 -4v6" />
@@ -53,7 +57,7 @@
                 <p class="card__paragraph">Every vehicle will have one and only one owner at a given time. When a vehicle is sold, the buyer becomes the new owner after having carried out the purchase. However, an owner must request to the government the owner rights to become a legal owner.</p>
             </section>
             <section class="second__pane__cards">
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-building-bank" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <svg xmlns="http://www.w3.org/2000/svg" class="card__svg" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                     <line x1="3" y1="21" x2="21" y2="21" />
                     <line x1="3" y1="10" x2="21" y2="10" />
@@ -68,7 +72,7 @@
                 <p class="card__paragraph">The government has the ability to change some of the legal status of a vehicle when legal situations are involved. Each vehicle has different legal status: stolen, arrested, penalty, owner rights, plate change.  Usually, the government establishes a transaction cost for making any process. </p>
             </section>
             <section class="second__pane__cards">
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <svg xmlns="http://www.w3.org/2000/svg" class="card__svg"44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                     <circle cx="12" cy="7" r="4" />
                     <path d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2" />
@@ -77,7 +81,7 @@
                 <p class="card__paragraph"> Is the only role that has permission to sell the NFT, and also to request the government to change its legal status. Moreover, he/she can request and authorize a <strong>Helper</strong> to add some information about a car.</p>
             </section>
             <section class="second__pane__cards">
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-users" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <svg xmlns="http://www.w3.org/2000/svg" class="card__svg"44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                     <circle cx="9" cy="7" r="4" />
                     <path d="M3 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2" />
@@ -88,7 +92,7 @@
                 <p class="card__paragraph">The owner receives a temporal permission from the Owner to set one transaction on the block-chain. The helper role will be used for transactions that change one or more data of the vehicle’s properties. This will include official services, mechanical adjustments, big aesthetic modifications and insurance payments.</p>
             </section>
             <section class="second__pane__cards">
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-search" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <svg xmlns="http://www.w3.org/2000/svg" class="card__svg"44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                     <circle cx="10" cy="10" r="7" />
                     <line x1="21" y1="21" x2="15" y2="15" />
@@ -98,5 +102,6 @@
             </section>
         </div>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
