Fixed hitbox problem, added only one card visible functionality

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                 </svg>
                 <h2 class="card__title">Manufacturer</h2>
                 <p class="card__paragraph">Is the role responsible of creating the NFT, The manufacturer adds the the vehicle's genesis information and who will be the government. In this case, he/she will be the first owner.</p>
+                <div class="clickbox"></div>
             </section>
             <section class="second__pane__cards">
                 <svg xmlns="http://www.w3.org/2000/svg" class="card__svg" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -55,6 +56,7 @@
                   </svg>
                 <h2 class="card__title">Owner</h2>
                 <p class="card__paragraph">Every vehicle will have one and only one owner at a given time. When a vehicle is sold, the buyer becomes the new owner after having carried out the purchase. However, an owner must request to the government the owner rights to become a legal owner.</p>
+                <div class="clickbox"></div>
             </section>
             <section class="second__pane__cards">
                 <svg xmlns="http://www.w3.org/2000/svg" class="card__svg" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -70,6 +72,7 @@
                   </svg>
                 <h2 class="card__title">Goverment</h2>
                 <p class="card__paragraph">The government has the ability to change some of the legal status of a vehicle when legal situations are involved. Each vehicle has different legal status: stolen, arrested, penalty, owner rights, plate change.  Usually, the government establishes a transaction cost for making any process. </p>
+                <div class="clickbox"></div>
             </section>
             <section class="second__pane__cards">
                 <svg xmlns="http://www.w3.org/2000/svg" class="card__svg"44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -79,6 +82,7 @@
                   </svg>
                 <h2 class="card__title">Legal Owner</h2>
                 <p class="card__paragraph"> Is the only role that has permission to sell the NFT, and also to request the government to change its legal status. Moreover, he/she can request and authorize a <strong>Helper</strong> to add some information about a car.</p>
+                <div class="clickbox"></div>
             </section>
             <section class="second__pane__cards">
                 <svg xmlns="http://www.w3.org/2000/svg" class="card__svg"44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -90,6 +94,7 @@
                   </svg>
                 <h2 class="card__title">Helper</h2>
                 <p class="card__paragraph">The owner receives a temporal permission from the Owner to set one transaction on the block-chain. The helper role will be used for transactions that change one or more data of the vehicle’s properties. This will include official services, mechanical adjustments, big aesthetic modifications and insurance payments.</p>
+                <div class="clickbox"></div>
             </section>
             <section class="second__pane__cards">
                 <svg xmlns="http://www.w3.org/2000/svg" class="card__svg"44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -99,6 +104,7 @@
                   </svg>
                 <h2 class="card__title">Seeker</h2>
                 <p class="card__paragraph">is the role that can obtain free or payment public information of the vehicle at any given time. Some free public information includes genesis attributes, debt with the government, arrest, service attributes, legal status, owner, legal owner, who was the manufacturer, stolen status, etc. Public payment information includes historic information about charges, penalties, owner rights, change of plates, etc</p>
+                <div class="clickbox"></div>
             </section>
         </div>
     </main>
