--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
                 <a href="" class="menu__element">Item 3</a>
                 <a href="" class="menu__element">Item 4</a>
             </nav>
+            <svg xmlns="http://www.w3.org/2000/svg" id="mobile__menu" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#016170" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                <line x1="4" y1="6" x2="20" y2="6" />
+                <line x1="4" y1="12" x2="20" y2="12" />
+                <line x1="4" y1="18" x2="20" y2="18" />
+              </svg>
+            <div id="back__menu"></div>
         </header>
 
         <section id="landing">
@@ -108,6 +115,6 @@
             </section>
         </div>
     </main>
-    <script src="script.js"></script>
+    <script src="mobile.js"></script>
 </body>
 </html>
