Fixed cards animation and added a proper header, landing padding, added learn more button

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
             <div id="landing__description">
                 <h2 id="landing__title">Tokeniza tu auto</h2>
                 <p id="landing__paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus temporibus velit assumenda dolor ex saepe hic, accusantium earum aperiam voluptates ratione ullam quas, a nemo deserunt excepturi! Pariatur laboriosam aut quidem reiciendis. Fugit, praesentium? Consequuntur ipsam blanditiis debitis sed suscipit.</p>    
-                <!-- <a id="learn__button" href="">Learn More</a> -->
+                <div style="display: flex; justify-content: center; padding-top: 50px;">
+                    <a id="learn__button" href="">Learn More</a>
+                </div>
             </div>
             <object data="Recurso 1.svg" id="landing__image"></object>
         </section>
